# stock_tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.MD  docker-compose.yml  market_data_demo.py  requirements.txt
.claude/: settings.json
.claude/agents/: reviewer.md
backend/: __init__.py  config.py  main.py  market_data_simulator.py  massive_api_interface.py  models.py  price_cache.py  pyproject.toml  snapshot.py  unified_market_data.py
backend/db/: __init__.py  crud.py  database.py  schema.sql
backend/llm/: __init__.py  client.py
backend/routers/: __init__.py  chat.py  portfolio.py  stream.py  watchlist.py
backend/tests/: test_api.py  test_db.py  test_llm.py
frontend/: jest.config.js  package-lock.json  package.json
frontend/__mocks__/: lightweight-charts.ts
frontend/__tests__/: ChatPanel.test.tsx  PositionsTable.test.tsx  TradeBar.test.tsx  WatchlistPanel.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  Header.tsx  MainChart.tsx  PLChart.tsx  PortfolioHeatmap.tsx  PositionsTable.tsx  TradeBar.tsx  WatchlistPanel.tsx
frontend/hooks/: useMarketData.ts  usePortfolio.ts
frontend/lib/: api.ts
planning/: MARKET_INTERFACE.md  MARKET_SIMULATOR.md  MASSIVE_api.md  PLAN.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: .gitignore  docker-compose.test.yml  global-teardown.cjs  package-lock.json  package.json  playwright.config.ts  run-server.cjs  tsconfig.json
test/tests/: app.spec.ts
